--- a/src/lib/layouts/Root.astro
+++ b/src/lib/layouts/Root.astro
@@ -19,4 +19,30 @@ const {
 } = Astro.props;
 
 const 正規URL = new URL(Astro.url.pathname, Astro.site).href;
+
+const metaTitle = (title === defaultTitle)
+  ? defaultTitle
+  : `title | ${defaultTitle}`
 ---
+
+<!doctype html>
+<html lang="ja">
+  <head>
+    <!-- 基本情報とAstro -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+
+    <!-- SEO -->
+    <title data-pagefind-meta="title">{title}</title>
+    <meta name="description" content={description} />
+    <link rel="sitemap" href="/sitemap-index.xml" />
+    {noindex && <meta name="robots" content="noindex" />}
+    <link rel="canonical" href={正規URL} />
+
+    <ClientRouter />
+  </head>
+  <body>
+    <slot />
+  </body>
+</html>
