--- a/src/lib/layouts/App.astro
+++ b/src/lib/layouts/App.astro
@@ -1,7 +1,7 @@
 ---
 import { ClientRouter } from "astro:transitions";
 
-import '@lib/styles/globals.scss';
+import '$lib/styles/globals.scss';
 
 const defaultTitle: string = 'クソUXを体験せよ';
 const defaultDescription: string = 'これを体験したら，開発者に感謝してください．';
