まあまあええ感じ

--- a/src/lib/components/layout/Header.astro
+++ b/src/lib/components/layout/Header.astro
@@ -4,11 +4,29 @@
 
 <header>
   <h1>-best UX</h1>
+  <div class="menu">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/form/">Form</a></li>
+    </ul>
+  </div>
 </header>
 
 <style lang="scss">
   header {
     display: flex;
     justify-content: space-between;
+    h1 {
+      
+    }
+    .menu {
+      ul {
+        display: flex;
+        list-style: none;
+        li {
+          margin-right: 10px;
+        }
+      }
+    }
   }
 </style>
