--- a/src/lib/components/layout/Header.astro
+++ b/src/lib/components/layout/Header.astro
@@ -1,9 +1,9 @@
 ---
-
+import { Font } from "astro:assets";
 ---
 
 <header>
-  <h1>-best UX</h1>
+  <h1>—best UX</h1>
   <div class="menu">
     <ul>
       <li><a href="/">Home</a></li>
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: space-between;
     h1 {
-      
+      font-family: var(--font-coming-soon);
     }
     .menu {
       ul {
