--- a/src/lib/layouts/Root.astro
+++ b/src/lib/layouts/Root.astro
@@ -52,3 +52,10 @@ import Header from "$lib/components/layout/Header.astro";
     <slot />
   </body>
 </html>
+
+<style lang="scss">
+  body {
+    margin: 0;
+    padding: 0;
+  }
+</style>
