--- a/src/lib/components/layout/Header.astro
+++ b/src/lib/components/layout/Header.astro
@@ -27,6 +27,8 @@ import { Font } from "astro:assets";
         margin: 0 20px;
         font-family: var(--font-coming-soon);
       }
+      text-decoration: none;
+      color: var(--foreground);
     }
     .menu {
       height: 100%;
@@ -39,6 +41,12 @@ import { Font } from "astro:assets";
         list-style: none;
         li {
           margin: 0 16px 7px 0;
+          font-family: var(--font-biz-udgothic);
+          font-size: 20px;
+          a {
+            text-decoration: none;
+            color: var(--link);
+          }
         }
       }
     }
