--- a/src/lib/layouts/Root.astro
+++ b/src/lib/layouts/Root.astro
@@ -45,6 +45,7 @@ import Header from "$lib/components/layout/Header.astro";
     <link rel="canonical" href={canonicalURL} />
 
     <Font cssVariable="--font-coming-soon" preload />
+    <Font cssVariable="--font-biz-udgothic" preload />
     <ClientRouter />
   </head>
   <body>
