--- a/src/lib/components/layout/Header.astro
+++ b/src/lib/components/layout/Header.astro
@@ -31,6 +31,9 @@ import { Font } from "astro:assets";
       color: var(--foreground) !important;
       &:hover {
         color: var(--text-hover) !important;
+        h1 {
+          color: var(--text-hover) !important;
+        }
       }
     }
     .menu {
