--- a/src/lib/components/layout/Header.astro
+++ b/src/lib/components/layout/Header.astro
@@ -30,9 +30,9 @@ import { Font } from "astro:assets";
       text-decoration: none;
       color: var(--foreground) !important;
       &:hover {
-        color: var(--text-hover) !important;
+        color: var(--headerH1-hover) !important;
         h1 {
-          color: var(--text-hover) !important;
+          color: var(--headerH1-hover) !important;
         }
       }
     }
