--- a/src/lib/styles/globals.scss
+++ b/src/lib/styles/globals.scss
@@ -15,8 +15,9 @@ $link-dark: rgb(150, 171, 255);
 
   // 使い所少ないやつ
   --link-hover: #{rgba($link, 0.6)};
+  --link-shadow: #{rgba($link, 0.2)};
   --headerH1-hover: #{rgba($foreground, 0.4)};
-  --headerH1-shadow: #{rgba($foreground, 0.2)};
+  --headerH1-shadow: #{rgba($foreground, 0.1)};
 
   @media (prefers-color-scheme: dark) {
     --foreground: #{$foreground-dark};
@@ -25,8 +26,9 @@ $link-dark: rgb(150, 171, 255);
 
     // 使い所少ないやつ
     --link-hover: #{rgba($link-dark, 0.6)};
+    --link-shadow: #{rgba($link-dark, 0.2)};
     --headerH1-hover: #{rgba($foreground-dark, 0.4)};
-    --headerH1-shadow: #{#{rgba($foreground-dark, 0.2)}};
+    --headerH1-shadow: #{#{rgba($foreground-dark, 0.1)}};
   }
 
   color: var(--foreground);
