--- a/src/lib/components/layout/Header.astro
+++ b/src/lib/components/layout/Header.astro
@@ -21,6 +21,10 @@ import { Font } from "astro:assets";
     justify-content: space-between;
     height: 47px;
     border-bottom: 1px solid black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
     .title {
       height: 100%;
       h1 {
